Adaptive for iPad

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 		<div id="recall-popup">
 			<a href="#" class="close"></a>
 			<h1>FEEDBACK</h1>
-			<label>Your Name</label>
+			<label>Your Name *</label>
 			<input type="text" name="name" value="">
-			<label>Phone Number</label>
+			<label>Phone Number *</label>
 			<input type="tel" name="tel" value="">
-			<label>Email</label>
+			<label>Email *</label>
 			<input type="Email" name="email" value="">
 			<label>Message</label>
 			<textarea rows="5" id="txt" name="textarea" placeholder="Enter your message ..." style="color: black"></textarea>
@@ -31,7 +31,7 @@
 		<div class="container">
 			<div class="top-container">
 				<div class="logo">
-					<img src="images/logo.png" alt="" width="85px">
+					<img src="images/logo.png" alt="" width="125px">
 				</div>
 				<div id="top-logo-container">
 					<p class="company-name">Apple</p>
@@ -182,11 +182,11 @@
 							</div>
 							<div class="phone">
 								<span class="fas fa-phone-alt"></span>
-								<span class="text">+38 (099) 674-23-99</span>
+								<span class="text">+38 (099) xxx-xx-99</span>
 							</div>
 							<div class="email">
 								<span class="fas fa-envelope"></span>
-								<span class="text">dsfomin2@gmail.com</span>
+								<span class="text">xxx@gmail.com</span>
 							</div>
 						</div>
 					</div>
